# Practice

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
custom-ports/libodb/: portfile.cmake  vcpkg.json
custom-ports/libodb-qt/: portfile.cmake  vcpkg.json
custom-ports/libodb-sqlite/: portfile.cmake  vcpkg.json
ocr_diff_bin/: CMakeLists.txt  dbpostprocess.hpp  main.cpp
odb_cpp/: CMakeLists.txt  main.cpp  models-odb.cxx  models-odb.hxx  models-odb.ixx  models.h  models.xml
tbb_flow_graph/: CMakeLists.txt  main.cpp
